--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,6 @@ data:
   test_data_path: data/olympiadbench.json
   max_prompt_length: 2048
   batch_size: 128
-  rollout_per_prompt: 64
   
 actor:
   model_name: Qwen/Qwen2.5-7B
@@ -16,10 +15,13 @@ actor:
   lr: 1e-6
   weight_decay: 1e-2
   max_grad_norm: 1.0
+  offload_model: false
+  offload_optimizer: false
 
   rollout:
     tp_size: 1
     gpu_memory_utilization: 0.9
+    rollout_per_prompt: 64
     train_temperature: 1.0
     test_temperature: 0.0
     max_response_length: 6192
@@ -42,9 +44,11 @@ critic:
   lr: 5e-6
   weight_decay: 1e-2
   max_grad_norm: 1.0
+  offload_model: false
+  offload_optimizer: false
 
 adv:
-  estimator: gae
+  estimator: reinforce
   gamma: 1.0
   lamda: 1.0
   group_norm: false
@@ -55,5 +59,5 @@ trainer:
   n_epochs: 1
   test_freq: 8
   save_freq: 32
-  save_path: ckpts
+  save_dir: ckpts
   
