--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ sglang[all]==0.4.6.post5
 wandb
 flash-attn==2.7.4.post1
 torchdata
+
+# Optional dependencies for GEM environment integration
+# Install with: pip install -r requirements.txt -r requirements-gem.txt
+# Or manually: pip install gem-rl
