--- a/RL2/trainer/config/ppo.yaml
+++ b/RL2/trainer/config/ppo.yaml
@@ -39,7 +39,7 @@ rollout:
     mem_fraction_static: 0.6
   train_prompts_per_rollout: null
   test_prompts_per_rollout: null
-  responses_per_prompt: null
+  responses_per_prompt: 1
   train_sampling_params:
     temperature: 1.0
     max_new_tokens: null
