--- a/RL2/trainer/config/ppo.yaml
+++ b/RL2/trainer/config/ppo.yaml
@@ -6,15 +6,18 @@ defaults:
 
 train_data:
   path: null
-  responses_per_prompt: ${rollout.responses_per_prompt}
-  max_turns: 1
-  max_new_tokens: null
+  experience:
+    responses_per_prompt: 1
+    max_turns: 1
+    max_new_tokens: null
+    mask_offpolicy_data: true
 
 test_data:
   path: null
-  responses_per_prompt: 1
-  max_turns: ${train_data.max_turns}
-  max_new_tokens: ${train_data.max_new_tokens}
+  experience:
+    responses_per_prompt: 1
+    max_turns: ${train_data.max_turns}
+    max_new_tokens: ${train_data.max_new_tokens}
 
 actor:
   max_inference_length_per_device: ${actor.max_length_per_device}
