--- a/RL2/trainer/config/ppo.yaml
+++ b/RL2/trainer/config/ppo.yaml
@@ -16,8 +16,8 @@ test_data:
   path: null
   experience:
     responses_per_prompt: 1
-    max_turns: ${train_data.max_turns}
-    max_new_tokens: ${train_data.max_new_tokens}
+    max_turns: ${train_data.experience.max_turns}
+    max_new_tokens: ${train_data.experience.max_new_tokens}
 
 actor:
   max_inference_length_per_device: ${actor.max_length_per_device}
