--- a/RL2/trainer/config/ppo.yaml
+++ b/RL2/trainer/config/ppo.yaml
@@ -48,7 +48,7 @@ rollout:
     mem_fraction_static: 0.6
   train_prompts_per_rollout: null
   test_prompts_per_rollout: null
-  responses_per_prompt: ${train_data.experience_responses_per_prompt}
+  responses_per_prompt: ${train_data.experience.responses_per_prompt}
   train_sampling_params:
     temperature: 1.0
     stop: null
