--- a/RL2/trainer/config/ref_actor/megatron.yaml
+++ b/RL2/trainer/config/ref_actor/megatron.yaml
@@ -7,5 +7,7 @@ tf_config:
   tensor_model_parallel_size: ${actor.tf_config.tensor_model_parallel_size}
   expert_model_parallel_size: ${actor.tf_config.expert_model_parallel_size}
   expert_tensor_parallel_size: ${actor.tf_config.expert_tensor_parallel_size}
+ddp_config:
+  use_distributed_optimizer: ${actor.ddp_config.use_distributed_optimizer}
 max_inference_length_per_device: ${actor.max_length_per_device}
 offload_model: true
