--- a/RL2/trainer/config/sft.yaml
+++ b/RL2/trainer/config/sft.yaml
@@ -6,6 +6,10 @@ data:
   path: null
   max_length: null
   batch_size: 128
+  prompt_key: prompt
+  response_key: response
+  messages_key: messages
+  apply_chat_template: true
 
 actor:
   avg_level: token
